# Logger

./: .clang-format  CMakeLists.txt  format.sh
Logger/include/: Logger.hpp
Logger/sources/: Logger.cpp
